package xce.tripodlike;

message TripodLikeShip {
  repeated int32 userIds = 1;
}
